<resources>
    <string name="app_name">Marcador Bozó</string>
    <string name="voltar">Voltar</string>
    <string name="comecar">Começar</string>
    <string name="adicionarJogador">Adicionar jogador</string>
    <string name="cancelar">Cancelar</string>
    <string name="proximo">Próximo</string>
    <string name="novoMarcador">Novo marcador</string>
    <string name="jogar">Jogar</string>
    <string name="sairDoMarcador">Sair do marcador</string>
    <string name="ok">Ok</string>
    <string name="nomeMarcador">Nome Marcador</string>
    <string name="ultimoMarcadorSalvo">Último Marcador Salvo</string>
    <string name="placar">Placar</string>
    <string name="nomeJogador">Nome jogador</string>
    <string name="marcadoresSalvos">Marcadores salvos</string>
    <string name="ganhador">Ganhador</string>
    <string name="placarDaRodada">Placar da rodada</string>
    <string name="limiteJogadores">Limite 10 jogadores</string>
    <string name="tituloPonto">Titulo ponto</string>
    <string name="primeiro">Primeiro</string>
    <string name="criarUmMarcador">Criar um marcador</string>
    <string name="marcadorDoBozo">Marcador do Bozó</string>
    <string name="dadosDoMarcador">Dados do marcador</string>
    <string name="ganhadoresPorRodada">Ganhadores por rodada</string>
    <string name="tabela">Tabela</string>
    <string name="textoWelcome1">Você deve ter um copo de bozó com 5 dados ou use nosso copo virtual.</string>
    <string name="textoWelcome2">Para criar um novo clique no botão Iniciar marcador</string>
    <string name="textoWelcome3">Nesta tela você vai marcar os valores que conseguir jogando com o copo de bozó</string>
    <string name="texto1Welcome3">Aqui você adiciona nome do marcador e os jogadores</string>
    <string name="texto2Welcome3">Primeiro</string>
    <string name="texto3Welcome3">Nome do marcador</string>
    <string name="texto4Welcome3">Por ultimo</string>
    <string name="texto5Welcome3">Nome dos jogadores</string>
    <string name="az" translatable="false">Áz</string>
    <string name="full" translatable="false">Full</string>
    <string name="quadra" translatable="false">Quadra</string>
    <string name="duque" translatable="false">Duque</string>
    <string name="seguida" translatable="false">Seguida</string>
    <string name="quina" translatable="false">Quina</string>
    <string name="terno" translatable="false">Terno</string>
    <string name="quadrada" translatable="false">Quadrada</string>
    <string name="sena" translatable="false">Sena</string>
    <string name="general" translatable="false">General</string>
    <string name="textoAdicionarJogadores">Agora adicione os jogadores para começar. Lembre-se no máximo 10 jogadores.</string>
    <string name="textoNovaPartida">Primeiro você precisa escrever um nome para seu Marcador de Bozó</string>
    <string name="total">Total</string>
    <string name="pontos">Pontos</string>
    <string name="nenhumMarcador">Nenhum marcador</string>
    <string name="nomeGanhador">Nome ganhador</string>
    <string name="valores">Valores</string>
    <string name="textoOutraRodada">Quer jogar outra rodada?</string>
    <string name="textoLimeiteJogadores">Ops! Você só pode adicionar no máximo 10 jogadores</string>
    <string name="XRiscar">X Riscar</string>
    <string name="ganhando">Ganhando</string>
    <string name="removerJogador">Remover jogador</string>
    <string name="finalizarRodada">Finalizar rodada</string>
    <string name="inciarMarcador">Iniciar Marcador</string>
    <string name="apagarMarcador">Apagar Marcador</string>
    <string name="apagar">Apagar</string>
    <string name="textoApagarMarcador">Apagar marcador</string>
    <string name="marcadorApagado">Marcador apagado</string>
    <string name="erroApagarMarcador">Erro ao apagar marcador</string>
    <string name="requer_jogadores">Ops! Adicione pelo menos 2 jogadores para começar</string>
    <string name="requer_jogador">Quase lá! Adiciona só mais 1 jogador para começar</string>
    <string name="adicionar">Adicionar</string>
    <string name="compartilharApp">Compartilhar APP</string>
    <string name="textoCompartilharApp">Baixe Marcador Bozó na GooglePlay</string>
    <string name="url_googleplay" translatable="false">https://play.google.com/store/apps/details?id=com.darthorg.bozo</string>
    <string name="recurso_nao_suportado">Recurso não suportado no seu dispositivo</string>
    <string name="parar">Parar</string>
    <string name="jogador">Jogador</string>
    <string name="foiAdicionado">foi adicionado</string>
    <string name="titulo_salvar_e_sair">Deseja salvar antes de sair?</string>
    <string name="menssagem_salvar_grupo">Você pode salvar seu marcador se quiser jogar mais tarde.</string>
    <string name="salvar">Salvar</string>
    <string name="salvando">Salvando só um momento...</string>
    <string name="marcador">Marcador</string>
    <string name="salvo_com_sucesso">salvo com sucesso</string>
    <string name="descartar">Descartar</string>
    <string name="descartar_alteracoes">Descartar Alterações</string>
    <string name="sair">Sair</string>
    <string name="sair_sem_jogar">Você não jogou nenhuma rodada.\nDeseja sair assim mesmo?</string>
    <string name="remover">Remover</string>
    <string name="textoRemoverJogador">Este jogador não vai mais jogar.\nTem certeza?</string>
    <string name="ops">Oops!</string>
    <string name="textoOpsRemoverJogador">Você não pode remover mais jogadores. O marcador deve ter no minimo 2 jogadores.</string>
    <string name="empate">Empate</string>
    <string name="texto_decisao_empate">Os jogadores devem decidir nos dados.\nSelecione o jogador que ganhou</string>
    <string name="finalizar">Finalizar</string>
    <string name="aviso">Aviso</string>
    <string name="rodada_incompleta">Alguns jogadores ainda não completaram todos os espaços. Deseja sair ?</string>
    <string name="nenhum_jogador_adicionado">Nenhum jogador foi adicionado</string>
    <string name="comoJogar">Como jogar?</string>
    <string name="Texto1">Primeiro você vai precisar, de um copo de Bozó e 5 dados.</string>
    <string name="Texto2">Depois  os participantes, vão ter que decidir quem vai começar.
        Á varias maneiras, mais vamos a explicação. O jogador que for começar vai colocar os 5 dados dentro do copo e chacoalhar
        até misturar bem e depois lança na mesa, ai remove o copo com cuidado para não desvirar os dados.
        Caso o dado depois que o copo for desvirado, estiverem um encima do outro esse erro de jogada não é contada e o jogador
        pode jogar outra vez. Lembrando que na hora de misturar os dados no copo, a boca do mesmo deve estar fechado para não
        cair nenhum dado para fora.
        Feito então o primeiro lance, o jogador ainda terá mais duas chances para lançar os dados. Então só para confirmar
        depois da primeira jogada ele escolhera qual tipo de jogada vai querer.
        </string>
    <string name="Texto3">Tipos de jogadas na seta á direita</string>
    <string name="Texto4">Os tipos de jogadas possiveis dentro do Bozó são essas: Áz, Duque, Terno, Quadra, Quina, Sena,
        Full, Seguida, Quadrada, General, como na ilustração abaixo. A marcação que você fizer vai depender das pedras que vier, depois das três tacadas.
         Mas vôce pode marcar o que quiser, mais um bom jogador segue um estrategia.
    </string>
    <string name="Marcacao">Marcação</string>
    <string name="Texto5">Quando jogar os dados, ele te dará 5 valores.
        Usando a estratégia básica, você vai escolher os valores que mais se repetem ou os que valem mais pontos.
        É so você lembrar que para marcar deve-se somar os valores obtidos por determinado jogo que você escolheu.
        com as exceções de Full, Seguida, Quadrada e General, porque essas jogadas já possui uma pontuação definida.</string>
    <string name="Texto6">No momento de marcar os pontos você não pode somar todos os pontos e sim escolher um tipo de jogo,para depois poder somar. Por exemplo, se eu tiver 2 Duques e 3 quinas, na primeira jogada das três possiveis.
Mas supondo que eu queira a Quina, pois vale mais pontos e é a que mais se repete, então eu somo tudo, totalizando 15 pontos de Quina.
Na tabela no nosso app você vai marcar em Quina. Mas,observando bem, 2 duques e 3 quinas também é uma jogada Full e ainda é de boca. Então eu posso marcar 15 pontos na tabela, na jogada Full. Mas se a jogada General for de bôca.Ai o valor passa a ser de 100 pontos e a jogada é finalizada imediatamente porque o jogador que fez o general de bôca,ganha a partida com o ponto soberano, independente se outro jogador estiver ganhando.</string>
    <string name="definicoes">Definições</string>
    <string name="valoresPecas1" translatable="false">10 / 20 / 30 / 40</string>
    <string name="valoresTabela">Valores da tabela</string>
    <string name="ligado">Ligado</string>
    <string name="luz_de_fundo_no_marcador">Luz de fundo no marcador</string>
    <string name="sobre">Sobre</string>
    <string name="versao_padrao">Versão : 1.1</string>
    <string name="todos_direitos_reservados">Todos direitos reservados.</string>
    <string name="atualizar">Atualizar</string>
    <string name="espiar_valores_encima">Espiar valores em cima</string>
    <string name="tema_do_copo">Tema do copo</string>
    <string name="quantidade_de_jogadas">Quantidade de jogadas</string>
</resources>