<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/jogador"
        android:paddingLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTrasnparente"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/colorBlackTransparente2"
        android:textAlignment="textStart"/>


    <Button
        android:id="@+id/adicionarJogador"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/adicionarJogador"
        android:drawableLeft="@drawable/ic_add_jogador"
        android:drawablePadding="32dp"
        android:paddingLeft="16dp"
        android:background="@color/colorTrasnparente"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textAlignment="textStart"/>
   <Button
       android:id="@+id/removerJogador"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/removerJogador"
       android:drawableLeft="@drawable/ic_deletar_jogador"
       android:drawablePadding="32dp"
       android:padding="16dp"
       android:background="@color/colorTrasnparente"
       android:textAllCaps="false"
       android:textSize="16sp"
       android:layout_marginBottom="8dp"
       android:textAlignment="textStart"/>

</LinearLayout>
