<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:id="@+id/fundoPopUp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccentDarkWhite"
    android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp">

            <TextView
                android:id="@+id/tituloPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginBottom="10dp"
                android:text="@string/limiteJogadores"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp" />



            <TextView
                android:id="@+id/txtPopup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tituloPopup"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/tituloPopup"
                android:layout_below="@+id/tituloPopup"
                android:layout_marginRight="16dp"
                android:text="@string/textoLimeiteJogadores"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textSize="16dp"
                android:layout_marginBottom="10dp" />


            <ImageView
                android:id="@+id/imgJogadores"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtPopup"
                android:layout_gravity="bottom|left"
                android:src="@drawable/img_jogadores" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btnCancelarPopup"
                    android:text="@string/cancelar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTrasnparente"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/btnAcao"
                    android:text="@string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTrasnparente"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:textSize="15dp"/>

            </LinearLayout>


        </RelativeLayout>


</LinearLayout>
</ScrollView>