<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/imagem_desenhos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/txtVersao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/versao_padrao"
                android:textColor="@color/colorWhiteTransparente"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_bozo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="© 2017 DarthOrg Inc."
                android:textSize="11dp"
                android:textColor="@color/colorWhiteTransparente"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todos_direitos_reservados"
                android:textSize="11dp"
                android:textColor="@color/colorWhiteTransparente"
                android:textAlignment="center"/>

        </LinearLayout>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:paddingBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/logo_darth_org"/>



    </RelativeLayout>



</LinearLayout>

