<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhiteFundo"
    android:theme="@style/AppTheme.WhiteBotton"
    tools:context=".view.Placar">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.WhiteBotton"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:elevation="5dp"
        android:background="@color/colorLaranja"
        app:title="@string/placar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:elevation="5dp"
        android:background="@color/colorLaranja"></FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="5dp"
        android:layout_marginTop="-40dp">

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">


            <Button
                android:text="250"
                android:background="@drawable/circulo_white"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="25dp"
                android:textColor="@color/colorBlack"
                android:id="@+id/btnQuantRodadas" />

            <TextView
                android:id="@+id/Titulo"
                android:elevation="@dimen/fab_elevation_lollipop"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                android:text="@string/total"/>


        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ganhadoresPorRodada"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDarkWhite"/>

        <ListView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/list_view_placar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


</LinearLayout>