<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoInstruções">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFundoInstruções"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:title="@string/marcadoresSalvos" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/listVazio"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/img_vazio"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:padding="20dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="true">

                    <Button
                        android:id="@+id/cardBtnNovoMarcador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/novoMarcador"
                        android:background="@color/colorTrasnparente"
                        android:textColor="@color/colorAccent"
                        android:layout_marginBottom="-10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nenhumMarcador"
                        android:textColor="#B1B1B1"
                        android:textAlignment="center"
                        android:textSize="16dp"
                        android:layout_below="@+id/listVazio"
                        android:layout_toRightOf="@+id/listVazio"
                        android:layout_toEndOf="@+id/listVazio"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginBottom="50dp" />

                </FrameLayout>

            </RelativeLayout>
            <ListView
                android:id="@+id/list_view_partidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="1dp"
                android:cacheColorHint="@color/colorBlack"
                android:divider="@color/colorFundoInstruções" />

    </RelativeLayout>

</LinearLayout>